FIX: do not show search banner on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -1,5 +1,5 @@
 .navigation-categories {
-  .custom-search-banner {
+  .search-banner {
     display: none;
   }
 }
